welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:30: error: Missing closing brace `}' assumed here
}
^PictureMono2:31: error: expected start of definition
override def run() {
         ^