welcome.lessons.welcome.methods.picture.PictureMono2.scala.code

	def faireV() {
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		droite()
		avance()
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		avance()
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		gauche()
		recule()
	
		}

			def Motif() {
				for(k<-1 to 4) {
					faireV()
					
				}
			
}
override def run() {
		for(l<-1 to 3) {
			for (m<-1 to 3) {
				Motif()
				avance(5)
				
			}
			
		}
